--- a/LCLMS.Service/LCLMS.Service.csproj
+++ b/LCLMS.Service/LCLMS.Service.csproj
@@ -41,6 +41,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StudentService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LCLMS.Model\LCLMS.Model.csproj">
+      <Project>{7a3b8560-cbd4-41f0-aad6-96f34f996f47}</Project>
+      <Name>LCLMS.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LCLMS.Repository\LCLMS.Repository.csproj">
+      <Project>{5f0f03c2-9672-4960-b771-3d888a2d1d38}</Project>
+      <Name>LCLMS.Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LCLMS.RequestModel\LCLMS.RequestModel.csproj">
+      <Project>{1ba30a70-6875-40e6-b2c2-2bd17b336c9f}</Project>
+      <Name>LCLMS.RequestModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LCLMS.ViewModel\LCLMS.ViewModel.csproj">
+      <Project>{5fe37821-8363-4aad-92e5-3e3c0dc012fb}</Project>
+      <Name>LCLMS.ViewModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
