--- a/LCLMS.Model/LCLMS.Model.csproj
+++ b/LCLMS.Model/LCLMS.Model.csproj
@@ -53,9 +53,14 @@
     <Compile Include="Migrations\201710170548314_createDB.Designer.cs">
       <DependentUpon>201710170548314_createDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710170805322_teacher added.cs" />
+    <Compile Include="Migrations\201710170805322_teacher added.Designer.cs">
+      <DependentUpon>201710170805322_teacher added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Students\Student.cs" />
+    <Compile Include="Teachers\Teacher.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -64,6 +69,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201710170548314_createDB.resx">
       <DependentUpon>201710170548314_createDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710170805322_teacher added.resx">
+      <DependentUpon>201710170805322_teacher added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
