--- a/LCLMS.RequestModel/LCLMS.RequestModel.csproj
+++ b/LCLMS.RequestModel/LCLMS.RequestModel.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentRequestModel.cs" />
+    <Compile Include="TeacherRequestModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
