--- a/LCLMS.ViewModel/LCLMS.ViewModel.csproj
+++ b/LCLMS.ViewModel/LCLMS.ViewModel.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentViewModel.cs" />
+    <Compile Include="TeacherViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
