--- a/LCLMS.Service/LCLMS.Service.csproj
+++ b/LCLMS.Service/LCLMS.Service.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentService.cs" />
+    <Compile Include="TeacherService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LCLMS.Model\LCLMS.Model.csproj">
