--- a/LCLMS.ViewModel/LCLMS.ViewModel.csproj
+++ b/LCLMS.ViewModel/LCLMS.ViewModel.csproj
@@ -40,9 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StudentViewModel.cs" />
-    <Compile Include="TeacherViewModel.cs" />
+    <Compile Include="StudentDetailViewModel.cs" />
+    <Compile Include="StudentGridViewModel.cs" />
+    <Compile Include="TeacherGridViewModel.cs" />
+    <Compile Include="TeacherDetailViewModel.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LCLMS.Model\LCLMS.Model.csproj">
+      <Project>{7A3B8560-CBD4-41F0-AAD6-96F34F996F47}</Project>
+      <Name>LCLMS.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
