--- a/LCLMS.Server/Web.config
+++ b/LCLMS.Server/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-LCLMS.Server-20171016094655.mdf;Initial Catalog=aspnet-LCLMS.Server-20171016094655;Integrated Security=True" providerName="System.Data.SqlClient" />
 
-    <add name="DefaultBusinessConnection" connectionString="server=VIRTUALBOX\SQLEXPRESS;database=CodeCoopersLmsDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultBusinessConnection" connectionString="server=.\SQLEXPRESS;database=CodeCoopersLmsDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   
   </connectionStrings>
   <appSettings></appSettings>
