--- a/LCLMS.Repository/LCLMS.Repository.csproj
+++ b/LCLMS.Repository/LCLMS.Repository.csproj
@@ -47,8 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StudentRepository.cs" />
     <Compile Include="TeacherRepository.cs" />
   </ItemGroup>
   <ItemGroup>
